Html file edited

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <body>
     <div id="exam">
       <div class="questionArea">
-        <h2 id="question">buraya soru gelecek</h2>
+        <h2 id="question"></h2>
         <ul>
           <li>
             <input type="radio" name="choose" id="chooseA" />
-            <label for="chooseA" id="explanationA"> Seçenek A</label>
+            <label for="chooseA" id="explanationA"> </label>
           </li>
           <li>
             <input type="radio" name="choose" id="chooseB" />
-            <label for="chooseB" id="explanationB"> Seçenek B</label>
+            <label for="chooseB" id="explanationB"></label>
           </li>
           <li>
             <input type="radio" name="choose" id="chooseC" />
-            <label for="chooseC" id="explanationC"> Seçenek C</label>
+            <label for="chooseC" id="explanationC"></label>
           </li>
           <li>
             <input type="radio" name="choose" id="chooseD" />
-            <label for="chooseD" id="explanationD"> Seçenek D</label>
+            <label for="chooseD" id="explanationD"></label>
           </li>
         </ul>
       </div>
